# hgd

./: .gitignore  .project  BSDmakefile  COPYING  DEVELOPERS  GNUmakefile  Makefile  Makefile.common  Makefile.in  README  TODO  admin.c  admin.h  autogen.sh  cfg.c  cfg.h  client.c  client.h  common.c  config.h  config.h.in  configure.in  crypto.c  crypto.h  db.c  db.h  hgd-admin.c  hgd-mk-pydoc.c  hgd-mk-pydoc.py  hgd-netd.c  hgd-playd.c  hgd.h  hgd.py  hgdc.c  mplayer.c  mplayer.h  nchgdc.c  nchgdc.h  net.c  net.h  (+7 more)
hgd/: Makefile  README  TODO  common.c  db.c  db.h  hgd-netd.c  hgd-playd.c  hgd.h  hgdc.c
hgd/man/: hgd-netd.1  hgd-playd.1  hgdc.1
man/: hgd-admin.1  hgd-netd.1  hgd-playd.1  hgd-proto.7  hgd-scripting.7  hgdc.1
plugins/: test.py
pydoc/html/: hgd.doccer.html  hgd.playlist.html  index.html
pydoc/txt/: hgd.doccer.txt  hgd.playlist.txt  index.txt
pylib/: README
pylib/hgd/: doccer.py  playlist.py  util.py
scripts/: test.py
share/: hgd.rc  hgdc.rc
share/examples/: hgd.rc  hgdc.rc
